# democracy-index

./: Cargo.toml  README.md  build.rs  table.wikitext
src/: lib.rs
